Edit index.html, style.css

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                 <div>Vatsan#2956</div>
                 <div>CIO</div>
             </div>
+            <div class="staff-item">
+                <img class="img" src="images/img5.jpg">
+                <div>EatingSubway#8815</div>
+                <div>Board Member</div>
+            </div>
         </div>
     </div>
 </body>
